tests/sksl/errors/Ossfuzz37469.asm.frag
### Compilation failed:

error: 1: expected expression, but found ']'
error: 1: expected ']', but found ';'
error: 1: expected ';', but found 'void'
3 errors
